post-install/traefik/traefik-dashboard-values.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
    - host: traefik.k8s.rpi
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-web-ui
              servicePort: web
